fixbug: 多线程Merge操作数据会丢失